syntax = "proto3";

package grpc_tutorial;

option go_package = "pb/";

import "memory_message.proto";

message Filter {
  double max_price = 1;
  double min_price = 2;
  double min_cpu_ghz = 3;
  uint32 min_cpu_cores = 4;
  Memory min_memory = 5;
}